src/pages/InnerContainer/InnerContainer.scss
@import '../../styles/variables';

.contentWrapper {
  flex-shrink: 0;
  flex-grow: 1;
  flex-basis: calc(100% - 3.5rem);
  overflow-y: scroll;
}

.content {
  max-width: 1264px;
  min-width: 960px;
  padding: 4rem 2rem;
  margin: 0 auto;

  @include tablet {
    min-width: auto;
  }

  @include phone {
    padding: 30px 10px;
    min-width: auto;
  }
}

